# lahacks-2026

./: README.md  package-lock.json  package.json  private_keys.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  supabase_schema.sql  tribe_worker_colab.ipynb
backend/app/: config.py  main.py  rate_limit.py
backend/app/models/: schemas.py
backend/app/routers/: agent_chat.py  analyses.py  auth.py  clusters.py  creator.py  friends.py  recommend.py  spotify_router.py
backend/app/services/: agent.py  audio.py  emotions.py  music_theory.py  recommendations.py  song_cache.py  spotify.py  supabase_client.py  tribe.py
backend/app/utils/: auth.py
backend/migrations/: 001_add_song_cache.sql  002_add_user_recommendations.sql  003_add_spotify_tokens.sql  003_create_friends_table.sql
docs/: ANIMATIONS.md  DESIGN_SYSTEM.md
frontend/: .impeccable.md  package-lock.json  package.json  tribe-v2-brain-visualization-guide.md  tsconfig.json
frontend/docs/: COLORS.md  DESIGN_SYSTEM.md  TYPOGRAPHY.md
frontend/public/: brain_mesh.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AudioTimeline.tsx  BrainMesh.tsx  BrainScene.tsx  ChatInterface.tsx  ColorBends.tsx  EmotionalProfile.tsx  FriendsActivity.tsx  HeadSilhouette.tsx  Icons.tsx  ImportButton.tsx  (+11 more)
src/app/: globals.css  page.tsx
src/components/: AnalysisPanel.tsx  AudioTimeline.tsx  BrainMesh.tsx  BrainScene.tsx  ColorBends.tsx  HeadSilhouette.tsx  Icons.tsx  ImportButton.tsx  ImportOverlay.tsx  MusicRadarChart.tsx  RadarChart.tsx  TopBar.tsx
(+17 files in other folders)
